--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activites.FunctionActivity"></activity>
-        <activity android:name=".Activites.SplashActivity">
+        <activity android:name=".activites.FunctionActivity" />
+        <activity android:name=".activites.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,8 +23,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activites.MainActivity"
+            android:name=".activites.MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activites.BarCodeScan" />
 
         <meta-data
             android:name="preloaded_fonts"
