--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activites.SecondaryActivity"></activity>
         <activity android:name=".activites.FunctionActivity" />
         <activity android:name=".activites.SplashActivity">
             <intent-filter>
